workspaceに紐づくchannelsのgetメソッドのエンドポイント追加
